--- a/src/xgboost_simple.ipynb
+++ b/src/xgboost_simple.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
     "from collections import deque\n",
     "import xgboost as xgb\n",
     "from xgboost import plot_importance, plot_tree\n",
-    "from sklearn.metrics import mean_absolute_error\n",
+    "from sklearn.metrics import mean_absolute_error,mean_squared_error\n",
     "from sklearn.metrics import r2_score\n",
     "from warnings import simplefilter\n",
     "simplefilter(action=\"ignore\", category=pd.errors.PerformanceWarning)\n",
@@ -555,7 +555,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, y_train, X_val, y_val, X_test, y_test = train_test_split(total_df, 0.85, 0.90)"
+    "X_train, y_train, X_val, y_val, X_test, y_test = train_test_split(total_df, 0.85, 0.95)"
    ]
   },
   {
@@ -893,6 +893,24 @@
    "outputs": [],
    "source": [
     "result_fin.to_csv(RESOURCE_FOLDER+\"/result_simple.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(X_test)\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(f\"MAE: {mae}\")\n",
+    "print(f\"MSE: {mse}\")\n",
+    "print(f\"RMSE: {rmse}\")\n",
+    "print(f\"R² Score: {r2}\")"
    ]
   },
   {
