Started writing EDA, and mde gd

--- a/src/Report.ipynb
+++ b/src/Report.ipynb
@@ -24,14 +24,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Domain Knowledge"
+    "#### Domain Knowledge\n",
+    "\n",
+    "After reading the dataset definitions and explainations, we started to search after relevant papers about vessel trajectory prediction (VTP). Our relevant findings can be divided into two parts: significant input features and state-of-the art ML methods. \n",
+    "\n",
+    "According to research some of the most important and most widely used input features for VTP (in addition to timestamps, latitude and altitude) are SOG, COG, heading, ship type and information about ports (Yang et al, 2024, p. 7).  \n",
+    "\n",
+    "The same paper also mentioned that some of the most used approaches to VTP are LSTM networks and its variants, especially bidirectional variants (Yang et al, 2024, p. 7). This is mostly because VTP can be approached as a time series problem because the data always contain a temporal dimension (Yang et al, 2024, p. 7).\n",
+    "\n",
+    "We used these findings as a basis and inspiration for our feature engineering, and to develop our first but (not accurate!) predictor. \n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Checking if data is intuitive"
+    "#### Checking if data is intuitive\n",
+    "\n"
    ]
   },
   {
@@ -123,6 +133,15 @@
    "metadata": {},
    "source": [
     "#### Feature importance plots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sources\n",
+    "\n",
+    "Yang, Y., Yang, L., Li, G., Zhang, Z. & Liu, Y.(2024).Harnessing the power of Machine learning for AIS Data-Driven maritime Research: A comprehensive review. Transportation Research Part E: Logistics and Transportation Review, 183, 103426. https://doi.org/10.1016/j.tre.2024.103426"
    ]
   }
  ],
