--- a/src/xgboost_simple.ipynb
+++ b/src/xgboost_simple.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -267,10 +267,27 @@
    ],
    "source": [
     "timedeltas=[timedelta(days=3),timedelta(days=1)]\n",
-    "total_df, last_rows = calculate_time_diffs_within_window(total_df, timedeltas) #1 min 14 sec on no delta, 2 min 30 sec on 1 and 3 day delta"
-    "total_df.to_csv(RESOURCE_FOLDER+\"/time_diff_training_data.csv\", index=False)\n",
-    "last_rows .to_csv(RESOURCE_FOLDER+\"/time_diff_training_st.csv\", index=False)\n",
+    "\n",
     "#total_df = pd.read_csv(RESOURCE_FOLDER+\"/time_diff_training_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_df, last_rows = calculate_time_diffs_within_window(total_df, timedeltas) #1 min 14 sec on no delta, 2 min 30 sec on 1 and 3 day delta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_df.to_csv(RESOURCE_FOLDER+\"/time_diff_training_data.csv\", index=False)\n",
+    "last_rows .to_csv(RESOURCE_FOLDER+\"/time_diff_training_st.csv\", index=False)"
    ]
   },
   {
@@ -459,9 +476,11 @@
     }
    ],
    "source": [
-    "feature_engineering_functions = [numerize_vesselId, numerize_portId, numerize_shippingLineId, \n",
-    "                                 numerize_homePort, categorize_navstat, numerize_UN_LOCODE, \n",
-    "                                 numerize_ISO, type_dummies, minutes_to_etaParsed] #, apply_markov,, categorize_rot\n",
+    "feature_engineering_functions = [ \n",
+    "                                  categorize_navstat, numerize_UN_LOCODE, \n",
+    "                                 numerize_ISO, type_dummies, minutes_to_etaParsed\n",
+    "                                 ] \n",
+    "#numerize_homePort, numerize_vesselId, apply_markov,, numerize_portId, numerize_shippingLineId, categorize_rot\n",
     "\n",
     "\n",
     "\n",
