--- a/src/xgboost_rf.ipynb
+++ b/src/xgboost_rf.ipynb
@@ -6509,7 +6509,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -6523,7 +6523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
